frontend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-three-tier
  labels:
    app: tejas-app
spec:
  template:
    metadata:
      labels:
        app: tejas-app
    spec:
      containers:
        - name: app-container
          image: tejaspatil19/3tier-frontend-kubernetes:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 200m
              memory: 100Mi
            limits:
              cpu: 400m
              memory: 200Mi
  replicas: 3
  selector:
    matchLabels:
      app: tejas-app
  strategy:
    type: RollingUpdate
...
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: tejas-app
...
