frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: home-svc 
      port:
        number: 80
  rules:
    - host: "af4e1a501b19b430e96d6535547f8160-07dbacc9c08f1d87.elb.eu-central-1.amazonaws.com"
      http:
        paths:
        - path: /html
          pathType: Prefix
          backend:
            service:
              name: student-svc
              port:
                number: 80
